feat：header nav

--- a/src/Blog.App/appsettings.Development.json
+++ b/src/Blog.App/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
-  "DetailedErrors": true,
+  "DetailedErrors": true, // 显示详细的堆栈信息
   "Logging": {
     "LogLevel": {
       "Default": "Information",
