--- a/src/Blog.App/appsettings.json
+++ b/src/Blog.App/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SassCompiler": {
+    "SourceFolder": "Styles/Base",
+    "TargetFolder": "wwwroot/css",
+    "Arguments": "--style=compressed",
+    "GenerateScopedCss": false,
+    "ScopedCssFolders": [ "Views", "Pages", "Shared", "Components" ]
+  }
 }
