--- a/src/Blog.App/Blog.App.csproj
+++ b/src/Blog.App/Blog.App.csproj
@@ -1,17 +1,22 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+	</PropertyGroup>
+	<ItemGroup>
+	  <Compile Remove="wwwroot\css\Styles\**" />
+	  <Content Remove="wwwroot\css\Styles\**" />
+	  <EmbeddedResource Remove="wwwroot\css\Styles\**" />
+	  <None Remove="wwwroot\css\Styles\**" />
+	</ItemGroup>
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+	<ItemGroup>
+		<Folder Include="wwwroot\css\" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="Data\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="MASA.Blazor" Version="0.2.9221" />
-  </ItemGroup>
-
+	<ItemGroup>
+		<PackageReference Include="AspNetCore.SassCompiler" Version="1.45.1" />
+		<PackageReference Include="MASA.Blazor" Version="0.2.9228" />
+	</ItemGroup>
 </Project>
