--- a/src/Blog.App/Properties/launchSettings.json
+++ b/src/Blog.App/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "Blog.App": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "https://localhost:7021;http://localhost:5021",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
