fix：post item style

--- a/src/Blog.App/Blog.App.csproj
+++ b/src/Blog.App/Blog.App.csproj
@@ -13,6 +13,7 @@
 
 	<ItemGroup>
 		<Folder Include="Pages\Categories\" />
+		<Folder Include="Pages\Posts\新文件夹\" />
 		<Folder Include="wwwroot\css\" />
 	</ItemGroup>
 
