--- a/src/Blog.App/appsettings.Development.json
+++ b/src/Blog.App/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AppSettings": {
+    "Ip": "192.168.1.1"
   }
 }
